new services add

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">24/7 Services</h2>
-            <p>If a dog chews shoes, whose shoes does he choose?</p>
+            <p>We provide round-the-clock support to ensure you get the best service anytime, anywhere.  
+              Fast, reliable, and always available for your needs!</p>
           </div>
         </div>
 
@@ -114,8 +115,10 @@
               class="w-32 h-32 rounded-full object-contain bg-white p-5" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">24/7 Services</h2>
-            <p>If a dog chews shoes, whose shoes does he choose?</p>
+            <h2 class="card-title">Fast Delivery</h2>
+            <p>Get your orders delivered quickly with our efficient shipping service.  
+              We prioritize speed and accuracy to ensure your package arrives on time.  
+              No delays, just fast and reliable delivery!</p>
           </div>
         </div>
 
@@ -128,8 +131,10 @@
               class="w-32 h-32 rounded-full object-contain bg-white p-5" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">24/7 Services</h2>
-            <p>If a dog chews shoes, whose shoes does he choose?</p>
+            <h2 class="card-title">Healthy Products </h2>
+            <p>We offer fresh, organic, and high-quality products for a  healthier lifestyle.  
+              Carefully sourced and free from harmful additives, ensuring great nutrition.  
+              Eat better, live better with our trusted selection of healthy products!</p>
           </div>
         </div>
       </div>
